--- a/k8s/petclinic.yml
+++ b/k8s/petclinic.yml
@@ -1,64 +1,40 @@
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: petclinic
-spec:
-  type: NodePort
-  ports:
-    - port: 80
-      targetPort: 8080
-  selector:
-    app: petclinic
-
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: petclinic
+  name: luckywebapp
   labels:
-    app: petclinic
+    app: luckywebapp
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: petclinic
+      app: luckywebapp
   template:
     metadata:
       labels:
-        app: petclinic
+        app: luckywebapp
     spec:
+      imagePullSecrets:
+        - name: acr-secret
       containers:
-        - name: workload
-          image: dsyer/petclinic
-          env:
-            - name: SPRING_PROFILES_ACTIVE
-              value: postgres
-            - name: SERVICE_BINDING_ROOT
-              value: /bindings
-            - name: SPRING_APPLICATION_JSON
-              value: |
-                {
-                  "management.endpoint.health.probes.add-additional-paths": true
-                }
-          ports:
-            - name: http
-              containerPort: 8080
-          livenessProbe:
-            httpGet:
-              path: /livez
-              port: http
-          readinessProbe:
-            httpGet:
-              path: /readyz
-              port: http
-          volumeMounts:
-            - mountPath: /bindings/secret
-              name: binding
-              readOnly: true
-      volumes:
-        - name: binding
-          projected:
-            sources:
-              - secret:
-                  name: demo-db
+      - name: luckywebapp
+        image: ravi5291.azurecr.io/my-app-image:latest
+        ports:
+        - containerPort: 8080
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: luckywebapp-service
+spec:
+  type: LoadBalancer
+  selector:
+    app: luckywebapp
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8080
+git add jenkinsfile k8s/petclinic.yml
+git commit -m "Add Jenkins pipeline and Kubernetes deployment files"
+git push
