--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
 
     tools {
-        maven 'maven' // Ensure this matches the Maven installation name in Jenkins
+        maven 'maven' // This must match the Maven tool name in Jenkins -> Tools
     }
 
     environment {
@@ -11,70 +11,68 @@ pipeline {
     }
 
     stages {
+
         stage('Checkout From Git') {
             steps {
-                git branch: 'main', url: 'https://github.com/luckysuie/luckyspringpetclinic.git'
+                git branch: 'main', url: 'https://github.com/ravi-on-cloud/spring-petclinic.git'
             }
         }
 
         stage('Maven Validate') {
             steps {
-                echo 'Validating the project...'
-                sh 'mvn validate'
+                sh 'mvn -B validate'
             }
         }
 
         stage('Maven Compile') {
             steps {
-                echo 'Compiling the project...'
-                sh 'mvn compile'
+                sh 'mvn -B compile'
             }
         }
 
         stage('Maven Test') {
             steps {
-                echo 'Running tests...'
-                sh 'mvn test'
+                sh 'mvn -B test'
             }
         }
 
         stage('Maven Package') {
             steps {
-                echo 'Packaging the project...'
-                sh 'mvn package'
+                sh 'mvn -B package'
             }
         }
 
+        /* ---- SonarCloud (Scanner CLI) ---- */
         stage('SonarCloud Analysis') {
             environment {
-                SCANNER_HOME = tool 'sonar-scanner' // Matches tool config in Jenkins
+                SCANNER_HOME = tool 'sonar-scanner'   // Jenkins -> Tools: SonarQube Scanner name
             }
             steps {
-                withSonarQubeEnv('sonarserver') {
+                withSonarQubeEnv('sonarserver') {      // Jenkins -> System: SonarQube server name
                     sh '''
                         $SCANNER_HOME/bin/sonar-scanner \
-                        -Dsonar.organization=sonarproject456 \
-                        -Dsonar.projectName=jenkins \
-                        -Dsonar.projectKey=sonarproject456_jenkins789 \
-                        -Dsonar.sources=src \
-                        -Dsonar.java.binaries=target/classes \
-                        -Dsonar.host.url=https://sonarcloud.io
+                          -Dsonar.organization=ravi-on-cloud \
+                          -Dsonar.projectName=jenkins \
+                          -Dsonar.projectKey=ravi-on-cloud_jenkins \
+                          -Dsonar.sources=src \
+                          -Dsonar.java.binaries=target/classes \
+                          -Dsonar.host.url=https://sonarcloud.io
                     '''
                 }
             }
         }
 
+        /* ---- SonarCloud (Maven plugin with token) ---- */
         stage('Publish Sonar Report') {
             steps {
-                echo 'Publishing SonarCloud report...'
                 withCredentials([string(credentialsId: 'sonar-token', variable: 'SONAR_TOKEN')]) {
                     sh '''
-                        mvn clean verify sonar:sonar \
-                        -Dsonar.projectKey=sonarproject456_jenkins789 \
-                        -Dsonar.organization=sonarproject456 \
-                        -Dsonar.host.url=https://sonarcloud.io \
-                        -Dsonar.login=$SONAR_TOKEN \
-                        -Dsonar.qualitygate.wait=false
+                        mvn -B clean verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+                          -Dsonar.projectKey=ravi-on-cloud_jenkins \
+                          -Dsonar.organization=ravi-on-cloud \
+                          -Dsonar.host.url=https://sonarcloud.io \
+                          -Dsonar.login=$SONAR_TOKEN \
+                          -Dsonar.qualitygate.wait=false
                     '''
                 }
             }
@@ -82,7 +80,6 @@ pipeline {
 
         stage('Build Docker Image') {
             steps {
-                echo 'Building Docker image...'
                 sh '''
                     docker build -t ${ImageName}:${BUILD_TAG} .
                     docker tag ${ImageName}:${BUILD_TAG} ravi5291.azurecr.io/${ImageName}:${BUILD_TAG}
@@ -92,15 +89,14 @@ pipeline {
 
         stage('Trivy Scan') {
             steps {
-                echo 'Running Trivy scan...'
                 sh '''
                     trivy image --format table --severity HIGH,CRITICAL \
-                        --output trivy-report.txt ravi5291.azurecr.io/${ImageName}:${BUILD_TAG}
+                      --output trivy-report.txt ravi5291.azurecr.io/${ImageName}:${BUILD_TAG}
                 '''
             }
             post {
                 always {
-                    archiveArtifacts artifacts: 'trivy-report.txt'
+                    archiveArtifacts artifacts: 'trivy-report.txt', fingerprint: true
                 }
             }
         }
@@ -111,28 +107,22 @@ pipeline {
                     usernamePassword(credentialsId: 'azure-sp', usernameVariable: 'AZURE_USERNAME', passwordVariable: 'AZURE_PASSWORD'),
                     string(credentialsId: 'azure-tenant', variable: 'TENANT_ID')
                 ]) {
-                    script {
-                        echo "Logging into Azure Container Registry..."
-                        sh '''
-                            az login --service-principal -u "$AZURE_USERNAME" -p "$AZURE_PASSWORD" --tenant "$TENANT_ID"
-                            az acr login --name ravi5291
-                            docker push ravi5291.azurecr.io/${ImageName}:${BUILD_TAG}
-                        '''
-                    }
+                    sh '''
+                        az login --service-principal -u "$AZURE_USERNAME" -p "$AZURE_PASSWORD" --tenant "$TENANT_ID"
+                        az acr login --name ravi5291
+                        docker push ravi5291.azurecr.io/${ImageName}:${BUILD_TAG}
+                    '''
                 }
             }
         }
 
         stage('Deploy to Kubernetes') {
             steps {
-                script {
-                    echo 'Deploying to Kubernetes...'
-                    sh '''
-                        az aks get-credentials --resource-group demo11 --name ravi-aks-cluster11
-                        kubectl apply -f k8s/petclinic.yml
-                        kubectl get all
-                    '''
-                }
+                sh '''
+                    az aks get-credentials --resource-group demo11 --name ravi-aks-cluster11 --overwrite-existing
+                    kubectl apply -f k8s/petclinic.yml
+                    kubectl get all
+                '''
             }
         }
     }
